sofia-sip (1.12.11-1) unstable; urgency=low

  * New faces.  Thanks for your work on this one George!

 -- Ron Lee <ron@debian.org>  Sun, 01 May 2011 01:11:11 +0930

sofia-sip (1.12.10-4) unstable; urgency=low

  * Upload to unstable.
  * Add new symbols from experimental buildd logs:
      libsofia-sip-ua0.symbols.alpha
      libsofia-sip-ua0.symbols.mipsel
  * Remove empty symbol files for unofficial architectures (will
    be added eventually later as access to such buildd logs is available):
      libsofia-sip-ua0.symbols.kfreebsd-i386
      libsofia-sip-ua0.symbols.kfreebsd-amd64
  * fix copyright link to point to LGPL-2.1 (though sources mention 
    LGPL version 2.1 or optionally any later)

 -- George Danchev <danchev@spnet.net>  Sun, 15 Feb 2009 18:02:43 +0200

sofia-sip (1.12.10-3) experimental; urgency=low

  * "Steal symbol diffs from experimental buildd' logs" release
  
  * Fix the header of libsofia-sip-ua-glib3.symbols (Closes: #512699)
  * Downgrade dpkg-gensymbols check to -c1, since we want to fail
    only when some symbols have disappeared (Closes: #512700).
  * Add new symbols:
      libsofia-sip-ua0.symbols.arm
      libsofia-sip-ua0.symbols.armel
      libsofia-sip-ua0.symbols.amd64
      libsofia-sip-ua0.symbols.powerpc
      libsofia-sip-ua0.symbols.ia64
      libsofia-sip-ua0.symbols.sparc
      libsofia-sip-ua0.symbols.s390
      libsofia-sip-ua0.symbols.hppa
      libsofia-sip-ua0.symbols.mips
  * Add new files:
      libsofia-sip-ua0.symbols.kfreebsd-i386
      libsofia-sip-ua0.symbols.kfreebsd-amd64

 -- George Danchev <danchev@spnet.net>  Sun, 11 Jan 2009 05:21:36 +0200

sofia-sip (1.12.10-2) experimental; urgency=low

  * added symbol files: libsofia-sip-ua-glib3.symbols and
    libsofia-sip-ua0.symbols.ARCH (only i386 is currently 
    done, the rest would need the diffs of autobuilders logs) 
  * libsofia-sip-ua-glib0.install removed, no such package anymore
  * added DEB_DH_MAKESHLIBS_ARGS_ALL := -- -c4