@@ -1,19 +1,0 @@
-1) todo list for next upstream release (1.12.9-) 
-
-   - none
-
-2) generic concerns
-
-   - it's normal that doxygen is run multiple times per library, but for
-     some reason the debian build causes the top-level "doxygen" target
-     to be run twice, and this needs to be fixed
-     ref:http://lists.alioth.debian.org/pipermail/pkg-voip-maintainers/2006-November/006604.html
-   
-   - should we give some recommendations for embedded
-     systems (like rm -rf /usr/share/doc) in README.Debian ?
-
-3) pkg-config dependencies
- 
-   Should sofia-sip's pc file have separate lib and libs_piv sections
-   in order to avoid creating dependencies between sofia-sip clients,
-   and libraries on which libsofia-sip-ua depends?
