@@ -2,7 +2,8 @@ Source: sofia-sip
 Section: net
 Priority: optional
 Maintainer: Ron Lee <ron@debian.org>
-Build-Depends: debhelper (>= 5), cdbs, pkg-config, libglib2.0-dev, libssl-dev, doxygen, graphviz, autotools-dev, dpkg-dev (>= 1.13.19)
+Build-Depends: debhelper (>= 5), pkg-config, libglib2.0-dev, libssl-dev,
+               doxygen, graphviz, dpkg-dev (>= 1.13.19)
 Standards-Version: 3.9.2.0
 Homepage: http://sofia-sip.sourceforge.net/
 Vcs-Git: git://git.debian.org/users/ron/sofia-sip.git
@@ -11,7 +12,7 @@ Vcs-Browser: http://git.debian.org/?p=users/ron/sofia-sip.git;a=summary
 Package: sofia-sip-bin
 Architecture: any
 Section: net
-Depends: ${shlibs:Depends}, ${misc:Depends}, libsofia-sip-ua0 (>= ${binary:Version})
+Depends: libsofia-sip-ua0 (>= ${binary:Version}), ${shlibs:Depends}
 Suggests: sofia-sip-doc
 Description: Sofia-SIP library utilities
  Sofia-SIP is an open-source SIP User-Agent library, compliant
@@ -27,7 +28,7 @@ Description: Sofia-SIP library utilities
 Package: libsofia-sip-ua0
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}
 Suggests: sofia-sip-doc
 Description: Sofia-SIP library runtime
  Sofia-SIP is an open-source SIP User-Agent library, compliant
@@ -47,7 +48,7 @@ Description: Sofia-SIP library runtime
 Package: libsofia-sip-ua-dev
 Architecture: any
 Section: libdevel
-Depends: ${shlibs:Depends}, ${misc:Depends}, libsofia-sip-ua0 (= ${binary:Version}), libc6-dev | libc-dev
+Depends: libsofia-sip-ua0 (= ${binary:Version})
 Suggests: sofia-sip-doc
 Description: Sofia-SIP library development files
  Sofia-SIP is an open-source SIP User-Agent library, compliant
@@ -62,7 +63,7 @@ Description: Sofia-SIP library development files
 Package: libsofia-sip-ua-glib3
 Architecture: any
 Section: libs
-Depends: ${shlibs:Depends}, ${misc:Depends}, libsofia-sip-ua0 (= ${binary:Version})
+Depends: libsofia-sip-ua0 (= ${binary:Version}), ${shlibs:Depends}
 Suggests: sofia-sip-doc
 Description: Sofia-SIP library glib/gobject interfaces runtime
  Sofia-SIP is an open-source SIP User-Agent library, compliant
@@ -76,7 +77,7 @@ Description: Sofia-SIP library glib/gobject interfaces runtime
 Package: libsofia-sip-ua-glib-dev
 Architecture: any
 Section: libdevel
-Depends: ${shlibs:Depends}, ${misc:Depends}, libsofia-sip-ua-glib3 (= ${binary:Version}), libsofia-sip-ua-dev, libglib2.0-dev
+Depends: libsofia-sip-ua-glib3 (= ${binary:Version}), libsofia-sip-ua-dev, libglib2.0-dev
 Suggests: sofia-sip-doc
 Description: Sofia-SIP library glib/gobject interface development files
  Sofia-SIP is an open-source SIP User-Agent library, compliant
@@ -91,7 +92,6 @@ Description: Sofia-SIP library glib/gobject interface development files
 Package: sofia-sip-doc
 Architecture: all
 Section: doc
-Depends: ${misc:Depends}
 Description: Sofia-SIP library library documentation
  Sofia-SIP is an open-source SIP User-Agent library, compliant
  with the IETF RFC3261 specification. It can be used as
