@@ -1,117 +1,7 @@
-usr/include/*/*/sres_async.h
-usr/include/*/*/sres_cache.h
-usr/include/*/*/sres_config.h
-usr/include/*/*/sres.h
-usr/include/*/*/sres_record.h
-usr/include/*/*/auth_client.h
-usr/include/*/*/auth_client_plugin.h
-usr/include/*/*/auth_common.h
-usr/include/*/*/auth_digest.h
-usr/include/*/*/auth_module.h
-usr/include/*/*/auth_ntlm.h
-usr/include/*/*/auth_plugin.h
-usr/include/*/*/base64.h
-usr/include/*/*/bnf.h
-usr/include/*/*/hostdomain.h
-usr/include/*/*/htable2.h
-usr/include/*/*/htable.h
-usr/include/*/*/http.h
-usr/include/*/*/http_hclasses.h
-usr/include/*/*/http_header.h
-usr/include/*/*/http_parser.h
-usr/include/*/*/http_protos.h
-usr/include/*/*/http_status.h
-usr/include/*/*/http_tag_class.h
-usr/include/*/*/http_tag.h
-usr/include/*/*/msg_addr.h
-usr/include/*/*/msg_buffer.h
-usr/include/*/*/msg_date.h
-usr/include/*/*/msg.h
-usr/include/*/*/msg_header.h
-usr/include/*/*/msg_mclass.h
-usr/include/*/*/msg_mclass_hash.h
-usr/include/*/*/msg_mime.h
-usr/include/*/*/msg_mime_protos.h
-usr/include/*/*/msg_parser.h
-usr/include/*/*/msg_protos.h
-usr/include/*/*/msg_tag_class.h
-usr/include/*/*/msg_types.h
-usr/include/*/*/nea.h
-usr/include/*/*/nea_tag.h
-usr/include/*/*/nta.h
-usr/include/*/*/nta_stateless.h
-usr/include/*/*/nta_tag.h
-usr/include/*/*/nta_tport.h
-usr/include/*/*/nth.h
-usr/include/*/*/nth_tag.h
-usr/include/*/*/nua.h
-usr/include/*/*/nua_tag.h
-usr/include/*/*/rbtree.h
-usr/include/*/*/rc4.h
-usr/include/*/*/sdp.h
-usr/include/*/*/sdp_tag.h
-usr/include/*/*/sha1.h
-usr/include/*/*/sip.h
-usr/include/*/*/sip_hclasses.h
-usr/include/*/*/sip_hclasses.h.in
-usr/include/*/*/sip_header.h
-usr/include/*/*/sip_parser.h
-usr/include/*/*/sip_protos.h
-usr/include/*/*/sip_protos.h.in
-usr/include/*/*/sip_status.h
-usr/include/*/*/sip_tag_class.h
-usr/include/*/*/sip_tag.h
-usr/include/*/*/sip_tag.h.in
-usr/include/*/*/sip_util.h
-usr/include/*/*/sl_utils.h
-usr/include/*/*/soa_add.h
-usr/include/*/*/soa.h
-usr/include/*/*/soa_session.h
-usr/include/*/*/soa_tag.h
-usr/include/*/*/sofia_features.h
-usr/include/*/*/sresolv.h
-usr/include/*/*/string0.h
-usr/include/*/*/stun_common.h
-usr/include/*/*/stun.h
-usr/include/*/*/stun_tag.h
-usr/include/*/*/su_addrinfo.h
-usr/include/*/*/su_alloc.h
-usr/include/*/*/su_alloc_stat.h
-usr/include/*/*/su_bm.h
-usr/include/*/*/su_config.h
-usr/include/*/*/su_configure.h
-usr/include/*/*/su_debug.h
-usr/include/*/*/su_errno.h
-usr/include/*/*/su.h
-usr/include/*/*/su_localinfo.h
-usr/include/*/*/su_log.h
-usr/include/*/*/su_md5.h
-usr/include/*/*/su_os_nw.h
-usr/include/*/*/su_strlst.h
-usr/include/*/*/su_tagarg.h
-usr/include/*/*/su_tag_class.h
-usr/include/*/*/su_tag.h
-usr/include/*/*/su_tag_inline.h
-usr/include/*/*/su_tag_io.h
-usr/include/*/*/su_time.h
-usr/include/*/*/su_types.h
-usr/include/*/*/su_uniqueid.h
-usr/include/*/*/su_vector.h
-usr/include/*/*/su_wait.h
-usr/include/*/*/token64.h
-usr/include/*/*/tport.h
-usr/include/*/*/tport_plugins.h
-usr/include/*/*/tport_tag.h
-usr/include/*/*/tstdef.h
-usr/include/*/*/uniqueid.h
-usr/include/*/*/url.h
-usr/include/*/*/url_tag_class.h
-usr/include/*/*/url_tag.h
-
-usr/share/sofia-sip/msg_parser.awk
-usr/share/sofia-sip/tag_dll.awk
-
+usr/include/*/*/*.h
 usr/lib/libsofia-sip-ua.a
 usr/lib/libsofia-sip-ua.so
 usr/lib/pkgconfig/sofia-sip-ua.pc
-usr/lib/libsofia-sip-ua.la
+
+usr/share/sofia-sip/msg_parser.awk
+usr/share/sofia-sip/tag_dll.awk
