@@ -1,7 +1,3 @@
-usr/include/*/*/su_source.h
-usr/include/*/*/su_glib.h
-usr/include/*/*/nua_glib.h
 usr/lib/libsofia-sip-ua-glib.a
 usr/lib/libsofia-sip-ua-glib.so
 usr/lib/pkgconfig/sofia-sip-ua-glib.pc
-usr/lib/libsofia-sip-ua-glib.la
