@@ -1,30 +1,100 @@
 #!/usr/bin/make -f
+#
+# Copyright 2003 - 2011, Ron Lee.
+
+SHELL = /bin/bash
 
 NUM_CPUS = $(shell getconf _NPROCESSORS_ONLN 2>/dev/null)
 PARALLEL = $(subst parallel=,,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-NJOBS    = $(or $(PARALLEL),$(NUM_CPUS),1)
+NJOBS    = -j$(or $(PARALLEL),$(NUM_CPUS),1)
 
-DEB_BUILD_PARALLEL = 1
-DEB_PARALLEL_JOBS := $(NJOBS)
+DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
-include /usr/share/cdbs/1/rules/utils.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/autotools.mk
+ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
+	INSTALL_PROGRAM += -s
+endif
 
-# not used:
-#DEB_CONFIGURE_SCRIPT_ENV += LDFLAGS="-Wl,-z,defs,--as-needed"
+export DH_OPTIONS
 
-DEB_MAKE_CLEAN_TARGET 		= clean
-DEB_DH_INSTALL_SOURCEDIR 	= debian/tmp
-DEB_INSTALL_DOCS_sofia-sip-doc  := libsofia-sip-ua/docs/html
-DEB_DH_MAKESHLIBS_ARGS_ALL      := -- -c1
 
-common-build-indep::
-	$(MAKE) doxygen
+objdir := objs
 
-common-binary-post-install-arch:: list-missing
 
-clean::
-	rm -Rf libsofia-sip-ua/docs/html
-	rm -Rf libsofia-sip-ua-glib/docs/html
+clean:
+	dh_testdir
+	dh_testroot
+	$(RM) *-stamp
+	$(RM) -r $(objdir) doc
+	dh_clean
+
+
+$(objdir)/config.status: configure
+	dh_testdir
+	mkdir -p $(objdir)
+	cd $(objdir) &&	../configure --host=$(DEB_HOST_GNU_TYPE)	\
+				     --build=$(DEB_BUILD_GNU_TYPE)	\
+				     --prefix=/usr
+
+build: build-arch
+
+build-arch: build-arch-stamp
+build-arch-stamp: $(objdir)/config.status
+	dh_testdir
+	$(MAKE) $(NJOBS) -C $(objdir)
+	touch $@
+
+build-indep: build-indep-stamp
+build-indep-stamp:
+	dh_testdir
+	$(MAKE) -C $(objdir) doxygen
+	touch $@
+
+
+install: install-arch install-indep
+
+install-arch: install-arch-stamp
+install-arch-stamp: build-arch
+	dh_testdir
+	cd $(objdir) && $(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
+	touch $@
+
+install-indep: build-indep
+
+
+binary: binary-indep binary-arch
+
+binary-indep: DH_OPTIONS = -i
+binary-indep: install-indep
+	dh_testdir
+	dh_testroot
+	dh_installdocs
+	dh_installchangelogs
+	dh_compress
+	dh_fixperms
+	dh_installdeb
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
+
+binary-arch: DH_OPTIONS = -a
+binary-arch: install-arch
+	dh_testdir
+	dh_testroot
+	dh_install --sourcedir=debian/tmp
+	dh_installdocs
+	dh_installchangelogs
+	dh_strip
+	dh_compress
+	dh_fixperms
+	dh_makeshlibs -- -c0
+	dh_installdeb
+	dh_shlibdeps
+	dh_gencontrol
+	dh_md5sums
+	dh_builddeb
+
+
+.PHONY: clean build build-arch build-indep install install-arch install-indep \
+	binary binary-arch binary-indep
 
