@@ -1,0 +1,2 @@
+objs/libsofia-sip-ua/docs/html
+objs/libsofia-sip-ua-glib/docs/html
